test/spec_vectors/func/fail/module_43.wat
(module (func $type-return-empty-vs-num (result i32) (return) (i32.const 1)))